--- a/public/assignment/assignemnt3/views/widget/templates/heading/widget-heading-edit.view.client.html
+++ b/public/assignment/assignemnt3/views/widget/templates/heading/widget-heading-edit.view.client.html
@@ -4,13 +4,13 @@
 
     <label for="name">Name</label>
     <input class="form-control"
-           placeholder="heading name"
+           placeholder="name"
            ng-model="model.widget.name"
            id="name"/>
 
     <label for="text">Text</label>
     <input class="form-control"
-           placeholder="heading text"
+           placeholder="text"
            ng-model="model.widget.text"
            id="text"/>
 
