--- a/public/assignment/assignemnt3/views/widget/templates/html/widget-html-edit.view.client.html
+++ b/public/assignment/assignemnt3/views/widget/templates/html/widget-html-edit.view.client.html
@@ -2,7 +2,7 @@
      role="main">
     <label for="name">Name</label>
     <input class="form-control"
-           placeholder="heading name"
+           placeholder="name"
            ng-model="model.widget.name"
            id="name"/>
 
