--- a/public/assignment/assignemnt3/views/widget/templates/image/widget-image-edit.view.client.html
+++ b/public/assignment/assignemnt3/views/widget/templates/image/widget-image-edit.view.client.html
@@ -6,13 +6,13 @@
 
     <label for="name">Name</label>
     <input class="form-control"
-           placeholder="facebook"
+           placeholder="name"
            ng-model="model.widget.name"
            id="name"/>
 
     <label for="text">Text</label>
     <input class="form-control"
-           placeholder="facebook"
+           placeholder="text"
            ng-model="model.widget.text"
            id="text"/>
 
