--- a/public/assignment/assignemnt3/views/widget/templates/youtube/widget-youtube-edit.view.client.html
+++ b/public/assignment/assignemnt3/views/widget/templates/youtube/widget-youtube-edit.view.client.html
@@ -4,13 +4,13 @@
 
     <label for="name">Name</label>
     <input class="form-control"
-           placeholder="YouTube widget name"
+           placeholder="name"
            id="name"
            ng-model="model.widget.name"/>
 
     <label for="text">Text</label>
     <input class="form-control"
-           placeholder="YouTube widget text"
+           placeholder="text"
            ng-model="model.widget.text"
            id="text"/>
 
