--- a/public/assignment/assignment4/views/widget/templates/image/widget-image-edit.view.client.html
+++ b/public/assignment/assignment4/views/widget/templates/image/widget-image-edit.view.client.html
@@ -43,7 +43,7 @@
 
     <!--<form action="/api/upload" method="post" enctype="multipart/form-data">-->
     <form action="/api/upload" method="post" enctype="multipart/form-data">
-        <input name="myFile" id="123" type="file" class="form-control"/>
+        <input name="myFile" id="123" type="file" class="form-control" accept="image/*"/>
         <input name="width" value="{{model.widget.width}}" style="display: none"/>
         <input name="userId" value="{{model.userId}}" style="display: none"/>
         <input name="websiteId" value="{{model.websiteId}}" style="display: none"/>
