--- a/public/assignment/assignment4/views/website/template/website-edit.view.client.html
+++ b/public/assignment/assignment4/views/website/template/website-edit.view.client.html
@@ -69,7 +69,7 @@
                           ng-model="model.website.description"
                           class="form-control"></textarea>
                 <!--delete button -->
-                <a ng-click="model.deletePage()"
+                <a ng-click="model.deleteWebsite()"
                    class="btn btn-block btn-danger">Delete</a>
             </div>
         </div>
