--- a/public/assignment/assignment5/views/widget/templates/html/widget-html-edit.view.client.html
+++ b/public/assignment/assignment5/views/widget/templates/html/widget-html-edit.view.client.html
@@ -6,10 +6,18 @@
            ng-model="model.widget.name"
            id="name"/>
 
+    <!--<label for="text">Text</label>-->
+    <!--<textarea class="form-control"-->
+    <!--placeholder="html code"-->
+    <!--data-ng-model="model.widget.text"-->
+    <!--id="text"-->
+    <!--rows="10"></textarea>-->
     <label for="text">Text</label>
-    <textarea class="form-control"
-              placeholder="html code"
-              data-ng-model="model.widget.text"
-              id="text"
-              rows="10"></textarea>
+    <div id="text"
+         ng-model="model.widget.text"
+         text-angular
+         ta-toolbar="[['h1','h2','h3'],['bold','italics','underline','strikeThrough'],
+        ['ul','ol'],['justifyLeft','justifyCenter','justifyRight','justifyFull'],
+        ['indent','outdent'],['html']]">
+    </div>
 </div>
