--- a/public/assignment/assignment5/views/widget/templates/widget-choose.view.client.html
+++ b/public/assignment/assignment5/views/widget/templates/widget-choose.view.client.html
@@ -7,15 +7,15 @@
      role="main">
     <ul class="list-group nowarp">
         <li class="list-group-item"><a ng-click="model.createWidget('HEADING')">Header</a></li>
-        <li class="list-group-item"><a href="">Label</a></li>
+        <!--<li class="list-group-item"><a href="">Label</a></li>-->
         <li class="list-group-item"><a ng-click="model.createWidget('HTML')">HTML</a></li>
-        <li class="list-group-item"><a href="">TextInput</a></li>
-        <li class="list-group-item"><a href="">Link</a></li>
-        <li class="list-group-item"><a href="">Button</a></li>
+        <li class="list-group-item"><a ng-click="model.createWidget('TEXT')">Text</a></li>
+        <!--<li class="list-group-item"><a href="">Link</a></li>-->
+        <!--<li class="list-group-item"><a href="">Button</a></li>-->
         <li class="list-group-item"><a ng-click="model.createWidget('IMAGE')">Image</a></li>
         <li class="list-group-item"><a ng-click="model.createWidget('YOUTUBE')">YouTube</a></li>
-        <li class="list-group-item"><a href="">Data Table</a></li>
-        <li class="list-group-item"><a href="">Repeater</a></li>
+        <!--<li class="list-group-item"><a href="">Data Table</a></li>-->
+        <!--<li class="list-group-item"><a href="">Repeater</a></li>-->
     </ul>
 </div>
 <!--header-->
