--- a/public/assignment/assignment5/views/widget/templates/widget-edit.view.client.html
+++ b/public/assignment/assignment5/views/widget/templates/widget-edit.view.client.html
@@ -1,7 +1,7 @@
 <!--header-->
 <div ng-include="'./views/common/header/one-col-header.view.client.html'"></div>
 <!--body-->
-<div ng-switch="model.widget.widgetType">
+<div ng-switch="model.widget.type">
     <div ng-switch-when="HEADING">
         <div ng-include="'./views/widget/templates/heading/widget-heading-edit.view.client.html'"></div>
     </div>
@@ -13,6 +13,9 @@
     </div>
     <div ng-switch-when="HTML">
         <div ng-include="'./views/widget/templates/html/widget-html-edit.view.client.html'"></div>
+    </div>
+    <div ng-switch-when="TEXT">
+        <div ng-include="'./views/widget/templates/text/widget-text-edit.view.client.html'"></div>
     </div>
 </div>
 
