fixing my crazy mac

--- a/public/assignment/assignment5/views/widget/templates/html/widget-html-edit.view.client.html
+++ b/public/assignment/assignment5/views/widget/templates/html/widget-html-edit.view.client.html
@@ -1,4 +1,4 @@
-<div class="container-fluid theme-showcase first-row"
+<div class="theme-showcase first-row"
      role="main">
     <label for="name">Name</label>
     <input class="form-control"
