--- a/public/assignment/assignment5/views/widget/templates/text/widget-text.view.client.html
+++ b/public/assignment/assignment5/views/widget/templates/text/widget-text.view.client.html
@@ -1,13 +1,15 @@
-<div class="wd-toolbar-width"
-     ng-if="widget.formatted"
+<div ng-if="widget.formatted"
      text-angular
-     ta-toolbar="[['h1','h2','h3'],['bold','italics','underline','strikeThrough'],
-        ['ul','ol'],['justifyLeft','justifyCenter','justifyRight','justifyFull'],
-        ['indent','outdent'],['html']]">
+     ta-toolbar="[['undo'], ['h1', 'h2', 'h3'],['p', 'pre', 'quote'],
+    ['bold', 'italics', 'underline', 'ul', 'ol'],
+    ['justifyLeft','justifyCenter','justifyRight', 'justifyFull'],
+    ['wordcount']]"></div>
+<input ng-if="!widget.formatted && (!widget.rows || widget.rows===1)"
+       value="{{widget.text}}"
+       placeholder="{{widget.placeholder}}"
+       class="form-control"/>
+<textarea ng-if="!widget.formatted && (widget.rows > 1)"
+          rows="{{widget.rows}}"
+          placeholder="{{widget.placeholder}}"
+          class="form-control">{{widget.text}}</textarea>
 
-    <input ng-if="!widget.formatted && (!widget.rows || widget.rows===1)"
-           placeholder="{{widget.textInput.placeholder}}" class="form-control"/>
-    <textarea ng-if="!widget.formatted && (widget.rows > 1)"
-              rows="{{widget.rows}}" placeholder="{{widget.placeholder}}"
-              class="form-control">{{widget.text}}</textarea>
-</div>
