--- a/public/assignment/assignment5/views/widget/templates/youtube/widget-youtube-edit.view.client.html
+++ b/public/assignment/assignment5/views/widget/templates/youtube/widget-youtube-edit.view.client.html
@@ -1,5 +1,5 @@
 <!--body-->
-<div class="container-fluid theme-showcase first-row"
+<div class="theme-showcase first-row"
      role="main">
     <label for="name">Name</label>
     <input class="form-control"
