assignment 6 -- add feature user passport login -- fix url start with user/:userId

--- a/public/assignment/assignment6/views/common/footer/footer.view.client.html
+++ b/public/assignment/assignment6/views/common/footer/footer.view.client.html
@@ -4,7 +4,7 @@
         <div>
             <ul class="nav navbar-nav pull-right">
                 <li ng-show="model.userId">
-                    <a href="#!/user/{{model.userId}}"><span class="glyphicon glyphicon-user"></span></a></li>
+                    <a href="#!/profile"><span class="glyphicon glyphicon-user"></span></a></li>
                 <li><a href="#!/"><span class="glyphicon glyphicon-home"></span></a></li>
             </ul>
         </div><!--/.nav-collapse -->
