--- a/public/assignment/assignment6/views/user/templates/login.view.client.html
+++ b/public/assignment/assignment6/views/user/templates/login.view.client.html
@@ -35,8 +35,7 @@
     <!--button-->
     <a class="btn btn-primary btn-block"
        ng-click="model.login()"
-       href=""
-    >Login</a>
+       href="">Login</a>
     <!--Register button-->
     <a class="btn btn-success btn-block"
        href="#!/register">Register</a>
