--- a/public/assignment/assignment6/views/page/templates/page-new.view.client.html
+++ b/public/assignment/assignment6/views/page/templates/page-new.view.client.html
@@ -9,10 +9,6 @@
         <div class="col-xs-4 hidden-xs">
             <div class="container-fluid">
                 <!--left panel body-->
-                <h1>
-                    {{model.user.username}}
-                </h1>
-
                 <div class=" theme-showcase first-row"
                      role="main">
                     <ul class="list-group nowarp">
@@ -35,7 +31,7 @@
                         <li ng-repeat="page in model.pages" class="list-group-item">
                             <div class="row ">
                                 <div class="col-lg-4 col-md-7 col-xs-10 ">
-                                    <a href="#!/user/{{model.userId}}/website/{{page.websiteId}}/page/{{page._id}}">
+                                    <a href="#!/website/{{page.websiteId}}/page/{{page._id}}">
                                         {{page.name}}
                                     </a>
                                 </div>
@@ -46,7 +42,7 @@
                                     {{page.dateAccessed | date}}
                                 </div>
                                 <div class="col-xs-2">
-                                    <a href="#!/user/{{model.userId}}/website/{{page.websiteId}}/page/{{page._id}}/widget">
+                                    <a href="#!/website/{{page.websiteId}}/page/{{page._id}}/widget">
                                         <span class="glyphicon glyphicon-cog pull-right"></span>
                                     </a>
                                 </div>
@@ -72,7 +68,7 @@
                                                                             placeholder="Description"
                                                                             class="form-control"></textarea>
                 <!--cancel button -->
-                <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page"
+                <a href="#!/website/{{model.websiteId}}/page"
                    class="btn btn-block btn-danger">Cancel</a>
             </div>
         </div>
