--- a/public/assignment/assignment6/views/user/templates/profile.view.client.html
+++ b/public/assignment/assignment6/views/user/templates/profile.view.client.html
@@ -59,13 +59,13 @@
 
     <!--websites button-->
     <a class="btn btn-primary btn-block"
-       href="#!/user/{{model.userId}}/website">Go To Websites </a>
+       href="#!/website">Go To Websites </a>
     <!--Save change button-->
     <a class="btn btn-success btn-block"
        ng-click="model.updateProfile()">Save Change </a>
     <!--Log out button-->
     <a class="btn btn-warning  btn-block"
-       href="#!/login">Logout</a>
+       ng-click="model.logout()">Logout</a>
     <!--Delete button-->
     <a class="btn btn-danger  btn-block"
        ng-click="model.deleteProfile()"
