--- a/public/assignment/assignment6/views/website/template/website-edit.view.client.html
+++ b/public/assignment/assignment6/views/website/template/website-edit.view.client.html
@@ -30,7 +30,7 @@
                         <li ng-repeat="website in model.websites" class="list-group-item">
                             <div class="row ">
                                 <div class="col-lg-4 col-md-7 col-xs-10 ">
-                                    <a href="#!/user/{{model.userId}}/website/{{website._id}}/page">
+                                    <a href="#!/website/{{website._id}}/page">
                                         {{website.name}}
                                     </a>
                                 </div>
@@ -69,7 +69,7 @@
                           ng-model="model.website.description"
                           class="form-control"></textarea>
                 <!--delete button -->
-                <a ng-click="model.deletePage()"
+                <a ng-click="model.deleteWebsite()"
                    class="btn btn-block btn-danger">Delete</a>
             </div>
         </div>
