--- a/public/assignment/assignment6/views/website/template/website-new.view.client.html
+++ b/public/assignment/assignment6/views/website/template/website-new.view.client.html
@@ -35,7 +35,7 @@
                         <li ng-repeat="website in model.websites" class="list-group-item">
                             <div class="row ">
                                 <div class="col-lg-4 col-md-7 col-xs-10 ">
-                                    <a href="#!/user/{{model.userId}}/website/{{website._id}}/page">
+                                    <a href="#!/website/{{website._id}}/page">
                                         {{website.name}}
                                     </a>
                                 </div>
@@ -46,7 +46,7 @@
                                     {{website.dateAccessed | date}}
                                 </div>
                                 <div class="col-xs-2">
-                                    <a href="#!/user/{{model.userId}}/website/{{website._id}}">
+                                    <a href="#!/website/{{website._id}}">
                                         <span class="glyphicon glyphicon-cog pull-right"></span>
                                     </a>
                                 </div>
