--- a/public/assignment/assignment6/views/widget/templates/widget-edit.view.client.html
+++ b/public/assignment/assignment6/views/widget/templates/widget-edit.view.client.html
@@ -26,7 +26,7 @@
            class="btn btn-block btn-danger">Delete</a>
     </div>
     <div ng-show="model.mode == 'new'">
-        <a href='#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget'
+        <a href='#!/website/{{model.websiteId}}/page/{{model.pageId}}/widget'
            class="btn btn-block btn-danger">cancel</a>
     </div>
 </div>
