testing facebook login

--- a/public/assignment/assignment6/views/user/templates/login.view.client.html
+++ b/public/assignment/assignment6/views/user/templates/login.view.client.html
@@ -36,6 +36,10 @@
     <a class="btn btn-primary btn-block"
        ng-click="model.login()"
        href="">Login</a>
+    <a href="/auth/facebook" class="btn btn-primary btn-block">
+        <span class="fa fa-facebook"></span>
+        Facebook
+    </a>
     <!--Register button-->
     <a class="btn btn-success btn-block"
        href="#!/register">Register</a>
