--- a/public/assignment/assignment6/views/page/templates/page-new.view.client.html
+++ b/public/assignment/assignment6/views/page/templates/page-new.view.client.html
@@ -56,6 +56,10 @@
         <div class="col-xs-12 col-sm-8 ">
             <!--right panel body-->
             <div class="container-fluid">
+                <div ng-show = "model.errorMessage"
+                     class="alert alert-danger">
+                    {{model.errorMessage}}
+                </div>
                 <!--edit page name-->
                 <label for="name-edit">Name</label> <input class="form-control"
                                                            ng-model="model.page.name"
