--- a/public/assignment/assignment6/views/website/template/website-edit.view.client.html
+++ b/public/assignment/assignment6/views/website/template/website-edit.view.client.html
@@ -55,6 +55,10 @@
         <div class="col-xs-12 col-sm-8 ">
             <!--right panel body-->
             <div class="container-fluid">
+                <div ng-show = "model.errorMessage"
+                     class="alert alert-danger">
+                    {{model.errorMessage}}
+                </div>
                 <!--edit website name-->
                 <label for="name-edit">Name</label>
                 <input class="form-control"
