--- a/public/assignment/assignment6/views/widget/templates/widget-edit.view.client.html
+++ b/public/assignment/assignment6/views/widget/templates/widget-edit.view.client.html
@@ -2,6 +2,10 @@
 <div ng-include="'./views/common/header/one-col-header.view.client.html'"></div>
 <!--body-->
 <div ng-switch="model.widget.type" class="container-fluid">
+    <div ng-show = "model.errorMessage"
+         class="alert alert-danger">
+        {{model.errorMessage}}
+    </div>
     <div ng-switch-when="HEADING">
         <div ng-include="'./views/widget/templates/heading/widget-heading-edit.view.client.html'"></div>
     </div>
