--- a/public/assignment/assignment6/views/main/templates/home.view.client.html
+++ b/public/assignment/assignment6/views/main/templates/home.view.client.html
@@ -20,29 +20,29 @@
              class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="">Admin</a></li>
-                <li><a href="#!/login">Login</a></li>
-                <li><a href="#!/register">Register</a></li>
-                <li><a href="#!/profile">Profile</a></li>
-                <li><a href="">Logout</a></li>
-                <li class="dropdown">
-                    <a href=""
-                       class="dropdown-toggle"
-                       data-toggle="dropdown"
-                       role="button"
-                       aria-haspopup="true"
-                       aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="">Action</a></li>
-                        <li><a href="">Another action</a></li>
-                        <li><a href="">Something else here</a></li>
-                        <li role="separator"
-                            class="divider"></li>
-                        <li class="dropdown-header">Nav header</li>
-                        <li><a href="">Separated link</a></li>
-                        <li><a href="">One more separated link</a></li>
-                    </ul>
-                </li>
+                <li ng-show="model.username ===undefined"><a href="#!/login">Login</a></li>
+                <li ng-show="model.username ===undefined"><a href="#!/register">Register</a></li>
+                <li ng-show="model.username !==undefined"><a href="#!/profile">Profile</a></li>
+                <li ng-show="model.username !==undefined"><a href="" ng-click="model.logout()">Logout</a></li>
+                <!--<li><a href="">Admin</a></li>-->
+                <!--<li class="dropdown">-->
+                    <!--<a href=""-->
+                       <!--class="dropdown-toggle"-->
+                       <!--data-toggle="dropdown"-->
+                       <!--role="button"-->
+                       <!--aria-haspopup="true"-->
+                       <!--aria-expanded="false">Dropdown <span class="caret"></span></a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li><a href="">Action</a></li>-->
+                        <!--<li><a href="">Another action</a></li>-->
+                        <!--<li><a href="">Something else here</a></li>-->
+                        <!--<li role="separator"-->
+                            <!--class="divider"></li>-->
+                        <!--<li class="dropdown-header">Nav header</li>-->
+                        <!--<li><a href="">Separated link</a></li>-->
+                        <!--<li><a href="">One more separated link</a></li>-->
+                    <!--</ul>-->
+                <!--</li>-->
             </ul>
         </div><!--/.nav-collapse -->
     </div>
