--- a/public/assignment/assignment6/views/page/templates/page-new.view.client.html
+++ b/public/assignment/assignment6/views/page/templates/page-new.view.client.html
@@ -2,7 +2,6 @@
 <div ng-include="'./views/common/header/two-col-header.view.client.html'"></div>
 <!--body-->
 
-
 <div class="container-fluid">
     <div class="row ">
         <!--left panel-->
@@ -56,15 +55,18 @@
         <div class="col-xs-12 col-sm-8 ">
             <!--right panel body-->
             <div class="container-fluid">
-                <div ng-show = "model.errorMessage"
+                <div ng-show="model.errorMessage"
                      class="alert alert-danger">
                     {{model.errorMessage}}
                 </div>
                 <!--edit page name-->
-                <label for="name-edit">Name</label> <input class="form-control"
-                                                           ng-model="model.page.name"
-                                                           placeholder="Name"
-                                                           id="name-edit"/>
+                <div class="form-group" ng-class="model.pageNameStyle">
+                    <label for="name-edit">Name</label>
+                    <input class="form-control"
+                           ng-model="model.page.name"
+                           placeholder="Name"
+                           id="name-edit"/>
+                </div>
                 <!--edit page description-->
                 <label for="description-edit">Description</label> <textarea id="description-edit"
                                                                             rows="5"
