--- a/public/assignment/assignment6/views/user/templates/login.view.client.html
+++ b/public/assignment/assignment6/views/user/templates/login.view.client.html
@@ -13,23 +13,29 @@
 
     <!--username and password-->
     <form>
-        <div class="form-group">
+        <div class="form-group " ng-class="model.usernameStyle">
             <!--username-->
             <label for="username">Username</label>
             <input ng-model="model.username"
                    type="text"
+                   autocorrect="off"
+                   autocapitalize="off"
                    id="username"
                    class="form-control"
                    placeholder="user1"/>
+            <span class="glyphicon glyphicon-remove form-control-feedback"></span>
         </div>
-        <div class="form-group">
+        <div class="form-group " ng-class="model.passwordSytle">
             <!--password-->
             <label for="password">Password</label>
             <input ng-model="model.password"
                    type="password"
+                   autocorrect="off"
+                   autocapitalize="off"
                    id="password"
                    class="form-control"
                    placeholder="password1234"/>
+            <span class="glyphicon glyphicon-remove form-control-feedback"></span>
         </div>
     </form>
     <!--button-->
