--- a/public/assignment/assignment6/views/widget/templates/text/widget-text-edit.view.client.html
+++ b/public/assignment/assignment6/views/widget/templates/text/widget-text-edit.view.client.html
@@ -1,11 +1,15 @@
-
-<div>
-    Text
-    <input ng-model="model.widget.text" class="form-control"/>
-    Rows
-    <input ng-model="model.widget.rows" class="form-control" type="number"/>
-    Placeholder
-    <input ng-model="model.widget.placeholder" class="form-control"/>
-    Formatted
-    <input ng-model="model.widget.formatted" type="checkbox"/>
+<div class="form-group" ng-class="model.widgetNameStyle">
+    <label for="name">Name</label>
+    <input class="form-control"
+           placeholder="name"
+           ng-model="model.widget.name"
+           id="name"/>
 </div>
+Text
+<input ng-model="model.widget.text" class="form-control"/>
+Rows
+<input ng-model="model.widget.rows" class="form-control" type="number"/>
+Placeholder
+<input ng-model="model.widget.placeholder" class="form-control"/>
+Formatted
+<input ng-model="model.widget.formatted" type="checkbox"/>
