--- a/public/assignment/assignment6/views/widget/templates/widget-edit.view.client.html
+++ b/public/assignment/assignment6/views/widget/templates/widget-edit.view.client.html
@@ -1,7 +1,8 @@
 <!--header-->
 <div ng-include="'./views/common/header/one-col-header.view.client.html'"></div>
 <!--body-->
-<div ng-switch="model.widget.type" class="container-fluid">
+<div ng-switch="model.widget.type" class="container-fluid theme-showcase first-row">
+
     <div ng-show = "model.errorMessage"
          class="alert alert-danger">
         {{model.errorMessage}}
