--- a/public/assignment/assignment6/views/main/templates/home.view.client.html
+++ b/public/assignment/assignment6/views/main/templates/home.view.client.html
@@ -14,7 +14,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand"
-               href="#">Assignment 2</a>
+               href="#">Assignment</a>
         </div>
         <div id="navbar"
              class="navbar-collapse collapse">
