--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -222,3 +222,10 @@ img::-moz-selection {
 
 body {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2); }
+
+.my-img-circle {
+  border-radius: 50%;
+  overflow: hidden;
+  width: 150px;
+  height: 150px;
+}
